addign client stuff

--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,12 @@
 <body>
 
 <div class="row">
-	<a class="button" href="#/settings">Settings</a>
-	<a class="button" href="#/llamalist">Llama List</a>
+  <a class="button" href="#/settings">Settings</a>
+  <!-- <a class="button" href="#/llamalist">Llama List</a>
   <a class="button" href="#/firstview">First View</a>
-  <a class="button" href="#/secondview">Second View</a>
+  <a class="button" href="#/secondview">Second View</a> -->
+  <a class="button" href="#/userlist">User List</a>
+  <a class="button" href="#tasklist">Task List</a>
 </div>
 
 <div ng-view></div>
