--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>MP2 Starter</title>
   <script src="./lib/angular/angular.min.js"></script>
+  <!--<script src="./src/js/angular-datepicker.js"></script> -->
   <script src="./lib/angular-route/angular-route.min.js"></script>
 
   <script src="./js/app.js"></script>
@@ -13,6 +14,7 @@
   <script src="./foundation/js/foundation.min.js"></script>
 
   <link rel="stylesheet" href="./css/styles.css">
+  <!-- <link href="./src/css/angular-datepicker.css" rel="stylesheet" type="text/css" /> -->
   <link rel="stylesheet" href="./foundation/css/foundation.css">
   
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
