--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,8 @@
 <html lang="en" ng-app='demoApp'>
 <head>
   <meta charset="UTF-8">
-  <title>MP2 Starter</title>
+  <title>MP3 Starter</title>
   <script src="./lib/angular/angular.min.js"></script>
-  <!--<script src="./src/js/angular-datepicker.js"></script> -->
   <script src="./lib/angular-route/angular-route.min.js"></script>
 
   <script src="./js/app.js"></script>
@@ -14,7 +13,6 @@
   <script src="./foundation/js/foundation.min.js"></script>
 
   <link rel="stylesheet" href="./css/styles.css">
-  <!-- <link href="./src/css/angular-datepicker.css" rel="stylesheet" type="text/css" /> -->
   <link rel="stylesheet" href="./foundation/css/foundation.css">
   
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -24,12 +22,14 @@
 <body>
 
 <div class="row">
+  <center>
   <a class="button" href="#/settings">Settings</a>
   <!-- <a class="button" href="#/llamalist">Llama List</a>
   <a class="button" href="#/firstview">First View</a>
   <a class="button" href="#/secondview">Second View</a> -->
   <a class="button" href="#/userlist">User List</a>
   <a class="button" href="#tasklist">Task List</a>
+  </center>
 </div>
 
 <div ng-view></div>
